--- a/frontend/src/app/claims/create-claim/create-claim.component.scss
+++ b/frontend/src/app/claims/create-claim/create-claim.component.scss
@@ -8,6 +8,7 @@ fieldset {
   padding: 10px;
   position: relative;
   border-radius: 4px;
+  border: 1px solid #ddd;
   padding-left: 10px !important;
 }
 
